Validate Signed Document by Upload and get Signature's CSV